# studia

./: .gitignore  08  09  11  Doxyfile  LICENSE  Makefile  README.md  dictedit.h  entryedit.h  macroprocessor.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modify.sh  planner.pro  pyproject.toml  schedule.h  sequence  sequence.cc  sequence.cc.bak  task3  tsig.c
2/: tsig.c
4/: memory.conf
5/: Makefile  philosophers  philosophers.c
6/: copy.c
7/: philosophers.c
checkers/: game.py  main.py  piece.py  pyproject.toml
eads/: CMakeLists.txt
earin/bayes/: input.json  main.py  pyproject.toml
earin/reinforcement/: .gitignore  pyproject.toml  training.py  visualisation.py
ecote/: 02  03  04  06  07
egui/: README.md
eopsy/: README.md
html/: annotated.html  classes.html  classstd_1_1unique__ptr.html  files.html  functions.html  functions_func.html  sequence_8cc.html  structDeepCpPtr-members.html  structDeepCpPtr.html  structOwningPtr-members.html  structOwningPtr.html  structSequence-members.html  structSequence.html  structSequence_1_1ConstIterator-members.html  structSequence_1_1ConstIterator.html  structSequence_1_1IterEnd.html  structSequence_1_1Iterator-members.html  structSequence_1_1Iterator.html  structSequence_1_1Node-members.html  structSequence_1_1Node.html
include/: sequence.hpp  util.hh  util.hpp
lab1/: dictedit.h  entryedit.h  mainwindow.h  mainwindow.ui  schedule.h  test.json
lab2/: Startup.cs  test.json
lab3/: .eslintcache  README.md  data.json  package-lock.json  package.json  server.js  tsconfig.json
latex/: annotated.tex  (+16 more)
(+69 files in other folders)
