[tool.poetry]
name = "reinforcement"
version = "0.1.0"
description = ""
authors = ["Piotrek Kochański <khnsky@khnsky.cc>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.3"
gym = "^0.18.3"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pylint = "^2.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
